# synthtrade

./: .cursorrules  .gitignore  .windsurfrules  009_add_peak_equity.sql  AGENT.md  AGENTS.md  CLAUDE.md  GEMINI.md  PROJECT.md  README.md  _check_quick.py  admin123  conftest.py  debug-scalping-live-session-bug.md  docker-compose.yml  opencode.json  package-lock.json  patch.py  pyrightconfig.json  render.yaml  run_tests.ps1  start.bat  start.ps1  start_all.ps1  start_be.ps1  update_tasks.py
.claude/: settings.local.json
.clinerules/: loom.md
.codex/: config.toml
.dbg/: scalping-live-session-bug.env  trae-debug-log-scalping-live-session-bug.ndjson
.history-memo/: 2026-05-19.md
.kilo/: kilo.json
.loom-backup-1.0.12/: setup.py
.plan/: position-reconciliation-fix.md
_supabase_test_stub/: __init__.py
app/: __init__.py
docs/: ARCHIVE_TASKS.md  BACKLOG.md  BUG_FIX_SUMMARY.md  CHANGELOG.md  HANDOFF.md  OCO_FLOW.md  OKX_API_Reference_SynthTrade.md  PERSISTENCE_FIX.md  PERSISTENCE_SUMMARY.md  RECAP_EPICA_MEMORY_LEARNING.md  STOP_WITH_OPEN_POSITION_ANALYSIS.md  STORY.md  TASKS.md  TASK_813_ALL_ACTIONS_STATUS.md  TASK_813_COMPLETE_ANALYSIS.md  TASK_813_FINAL_SUMMARY.md  TASK_813_IMPLEMENTATION_COMPLETE.md  TDD_LOG.md  capital_allocator.py  completed_tasks.txt  extract_tasks.py  parse_tasks.py  synthtrade-considerazioni-roadmap.md
loom/: LICENSE  QUICKSTART.md  README.md  __init__.py  install.ps1  install.sh  pyproject.toml
loom/directives/: README.md  coding-standards.md  component-patterns.md  frontend-angular.md  scss-tokens.md
loom/execution/: _template.py  task_status.py
loom/ide-configs/antigravity/: ANTIGRAVITY.md.template
loom/ide-configs/intellij/: LOOM.md.template
loom/ide-configs/windsurf/: windsurfrules.template
loom/scripts/: build-zip.py  extract_tasks.py  init-project.ps1  init-project.sh  parse_tasks.py  read_loom.py  sync-configs.sh  task.py  task_tdd.py  update.py
loom/templates/: PROJECT.md.template  coding-standards.md  doe-architecture.md
loom/templates/docs/: CHANGELOG.md  HANDOFF.md  TASKS.md
loom/tests/: test_pipeline_metrics.py  test_task_015.py  test_task_033.py  test_task_035.py
plans/: task808_backtest_engine.md  task809_frontend_scalping.md  task_fix_chart_and_mode.md
(+557 files in other folders)
